--- a/src/styles.css
+++ b/src/styles.css
@@ -25,9 +25,22 @@ body {
   height: 100%;
 }
 
-.main-contents > .projection-view {
+.main-contents > .timeline-view {
   position: absolute;
   top: 0;
+  left: 0;
+  width: 50%;
+  height: 300px;
+}
+
+.main-contents > .timeline-view > .box {
+  width: 100%;
+  height: 100%;
+}
+
+.main-contents > .projection-view {
+  position: absolute;
+  top: 300px;
   left: 0;
   bottom: 0;
   width: 50%;
