--- a/src/styles.css
+++ b/src/styles.css
@@ -27,39 +27,29 @@ body {
 
 .main-contents > .timeline-view {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
-  width: 50%;
+  right: 0;
   height: 300px;
-}
-
-.main-contents > .timeline-view > .box {
-  width: 100%;
-  height: 100%;
 }
 
 .main-contents > .projection-view {
   position: absolute;
-  top: 300px;
+  top: 0;
   left: 0;
-  bottom: 0;
+  bottom: 300px;
   width: 50%;
-}
-
-.main-contents > .projection-view > .box {
-  width: 100%;
-  height: 100%;
 }
 
 .main-contents > .word-bubble-view {
   position: absolute;
   top: 0;
-  bottom: 0;
+  bottom: 300px;
   right: 0;
   width: 50%;
 }
 
-.main-contents > .word-bubble-view > .box {
+.main-contents .box {
   width: 100%;
   height: 100%;
 }
